samples/_failures_safe/1760960559_9b139d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4e7cf4e.c: In function ‘main’:
./samples/SAFE/__tmp_f4e7cf4e.c:157:9: error: expected expression at end of input
  157 |         input_buffer[input_len -
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_f4e7cf4e.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4e7cf4e.c:157:9: error: expected declaration or statement at end of input
